--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -13,6 +13,6 @@ pipelines:
           - mkdir -pv "${PACKAGE_PATH}"
           - tar -cO --exclude-vcs --exclude=bitbucket-pipelines.yml . | tar -xv -C "${PACKAGE_PATH}"
           - cd "${PACKAGE_PATH}"
-          - go get -v recorder/server/recorder_main.go
-          - go build -v
+          - go get -v 
+          - go build -v recorder/server/recorder_main.go
           - go test -v
