--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,4 +15,4 @@ pipelines:
           - cd "${PACKAGE_PATH}"
           - go get -v ./...
           - go build -v recorder/server/recorder_main.go
-          - go test -v
+          - go test -v ./...
