--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -15,7 +15,7 @@ pipelines:
           - tar -cO --exclude-vcs --exclude=bitbucket-pipelines.yml . | tar -xv -C "${PACKAGE_PATH}"
           - cd "${PACKAGE_PATH}"
           - go get -v github.com/tools/godep
-          - go build github.com/tools/godep -o godep
+          - go build github.com/tools/godep
           - godep go build -v recorder/server/recorder_main.go
           - godep go test -v ./...
 #          - docker build -t "kodek/tesler_recorder:latest" -f recorder/Dockerfile .
