--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,9 @@ image: golang:1.8
 pipelines:
   default:
     - step:
+        caches:
+          - githubdeps
+          - golangdeps
         script: # Modify the commands below to build your repository.
           - PACKAGE_PATH="${GOPATH}/src/bitbucket.org/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}"
           - mkdir -pv "${PACKAGE_PATH}"
@@ -20,6 +23,9 @@ pipelines:
 #          - docker build -t "kodek/tesler_recorder:latest" -f recorder/Dockerfile .
 #          - docker login --username $DOCKER_USERNAME --password $DOCKER_PASSWORD
 #          - docker push kodek/tesler_recorder:lastest
-          
+definitions:
+  caches:
+    githubdeps: /go/src/github.com
+    golangdeps: /go/src/golang.org
 options:
   docker: true
