Migrate Tesler to github / travis-ci.

--- a/recorder/Dockerfile
+++ b/recorder/Dockerfile
@@ -1,12 +1,18 @@
 # iron/go is the alpine image with only ca-certificates added
 #FROM iron/go
-FROM golang:1.9.2
+FROM golang:1.10.3
 WORKDIR /app
 # Now just add the binary 
 COPY ./templates /app/templates/
 COPY recorder_main .
+COPY start_tesler.sh .
+
+RUN chmod +x ./start_tesler.sh
 
 ENV TZ America/Los_Angeles
+
+ARG travis_commit
+ENV TRAVIS_COMMIT=$travis_commit
 
 RUN echo $TZ > /etc/timezone && \
     apt-get update && apt-get install -y tzdata && \
@@ -15,4 +21,4 @@ RUN echo $TZ > /etc/timezone && \
     dpkg-reconfigure -f noninteractive tzdata && \
     apt-get clean
 
-ENTRYPOINT ["./recorder_main"]
+ENTRYPOINT ["./start_tesler.sh"]
